--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
     defaults:
       run:
-        working-directory: terraform
+        working-directory: terraform/development
     steps:
       - name: Checkout
         uses: actions/checkout@v2
