--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,11 +33,11 @@ jobs:
         id: init
         run: terraform init
 
-      # - name: Terraform Plan
-      #   id: plan
-      #   # if: github.event_name == 'pull_request'
-      #   run: terraform plan -no-color
-      #   continue-on-error: true
+      - name: Terraform Plan
+        id: plan
+        # if: github.event_name == 'pull_request'
+        run: terraform plan -no-color
+        continue-on-error: true
 
       # - uses: actions/github-script@0.9.0
       #   # if: github.event_name == 'pull_request'
@@ -65,9 +65,9 @@ jobs:
       #   if: steps.plan.outcome == 'failure'
       #   run: exit 1
 
-      # - name: Terraform Apply
-      #   # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   run: terraform apply -auto-approve -input=false
+      - name: Terraform Apply
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
 
       - name: Terraform Destroy
         # if: steps.plan.outcome == 'failure'
