--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -65,10 +65,10 @@ jobs:
       #   if: steps.plan.outcome == 'failure'
       #   run: exit 1
 
-      - name: Terraform Apply
-        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+      # - name: Terraform Apply
+      #   # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      #   run: terraform apply -auto-approve -input=false
 
-      - name: Terraform Destroy
-        # if: steps.plan.outcome == 'failure'
-        run: terraform destroy -auto-approve
+      # - name: Terraform Destroy
+      #   # if: steps.plan.outcome == 'failure'
+      #   run: terraform destroy -auto-approve
